<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    tools:context="com.mollases.zombies.pregame.joinablegames.JoinableGamesFragment"
    android:orientation="horizontal"
    android:focusable="false"
    android:clickable="false"
    android:id="@+id/view_joinable_games_item">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_joinable_games_open_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game_title_value"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_joinable_games_open_current_players_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/new_game_current_players_value"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="/"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center" />

            <TextView
                android:id="@+id/view_joinable_games_open_max_players_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/new_game_max_players_value"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>

        <TextView
            android:id="@+id/view_joinable_games_open_where_label"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_game_where_value"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center" />

</LinearLayout>